Bug 109261 - Crash in: rtl_uString_acquire when adding a video to a slide with zero undo steps
Summary: Crash in: rtl_uString_acquire when adding a video to a slide with zero undo s...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4.6.3 release
Hardware: All All
: medium major
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0 target:5.4.2 target:5.3.7
Keywords: haveBacktrace
Depends on:
Blocks: Undo-Zero-Steps
  Show dependency treegraph
 
Reported: 2017-07-21 18:34 UTC by Telesto
Modified: 2017-09-06 10:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["rtl_uString_acquire"]


Attachments
bt with debug symbols (5.42 KB, text/plain)
2017-07-22 18:39 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-07-21 18:34:02 UTC
This bug was filed from the crash reporting server and is br-de6c4a1c-2076-4ab2-ab3e-8942f59f6137.
=========================================
1. Download a WMV file: http://www.educationalquestions.com/video/DLP_PART_2_768k.wmv
2. Open Impress
3. Cancel the Template Dialog
4. Select the slide pane and add a slide
5. Click the video button on the second slide
6. Import the downloaded video -> Crash

7. No crash when using Insert -> Audio/Video
Comment 1 Telesto 2017-07-21 18:38:45 UTC
Oops, forgot one essential step
Step 3b. Set the Undo count to zero (0). Menu -> Tools -> Options - Advanced -> Open expert configuration: Set the undo count from 100 (default) to zero (https://help.libreoffice.org/Common/Memory#Number_of_undo_steps)
Comment 2 Julien Nabet 2017-07-22 18:39:36 UTC
Created attachment 134785 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.
Comment 3 Xisco Faulí 2017-09-01 17:32:14 UTC
I can't reproduce it in

Version: 6.0.0.0.alpha0+
Build ID: 04d70c0999c716f5465631eca50945915ec607c4
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

nor in

Version: 6.0.0.0.alpha0+
Build ID: 78960ad06faca055a6d97afbc764c902d5d07f6f
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-08-30_06:31:19
Locale: es-ES (es_ES); Calc: group

Could you please test it in master ?
Comment 4 Julien Nabet 2017-09-01 17:54:18 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.
Comment 5 Xisco Faulí 2017-09-01 18:08:14 UTC
(In reply to Julien Nabet from comment #4)
> On pc Debian x86-64 with master sources updated today, I don't reproduce
> this.

Since you reproduced it in the past but not anymore, I guess we can close this as RESOLVED WORKSFORME

I can't reproduce it in

Versión: 5.4.1.2
Id. de compilación: ea7cb86e6eeb2bf3a5af73a8f7777ac570321527
Subproc. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group

neither
Comment 6 Telesto 2017-09-01 18:38:09 UTC
Still a repro with:
Version: 6.0.0.0.alpha0+
Build ID: ec67943f59e09f0f933182f52e582e28b3f258bc
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-08-31_07:23:27
Locale: nl-NL (nl_NL); Calc: CL

The STR in comment 0 is missing an essential pre-requirement: zero undo steps (as noted in comment 1)
Comment 7 Commit Notification 2017-09-02 05:18:50 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=27068e6cc39aed8ebfa5fdd7a67acb89f5adcb89

tdf#109261: Crash when adding a video to a slide with zero undo steps

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2017-09-06 10:26:33 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=12109f0053fefcc74e54c696a940052faffea0e3&h=libreoffice-5-4

tdf#109261: Crash when adding a video to a slide with zero undo steps

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2017-09-06 10:27:53 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3ce90f78ed77c76ec6e0af3731f2fb37628ef89c&h=libreoffice-5-3

tdf#109261: Crash when adding a video to a slide with zero undo steps

It will be available in 5.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.