tdf#109261: Crash when adding a video to a slide with zero undo steps

When undo is disabled (no undo steps), ReplaceObjectAtView()
method frees pPickObj, so we need to save it's reused data first.

Change-Id: Icbc800d4d33cf229006aecde7d62aa2a7ea35879
Reviewed-on: https://gerrit.libreoffice.org/41822
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>